2013-07-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/files.spad.pamphlet,
	src/lisp/primitives.lisp: Really use Lisp type
	declarations.

2013-07-28  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/doc/Makefile.in: Fix mobius build with optional xvfb-run.

2013-07-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-spec1.boot: Allow idempotent redeclaration
	of mapping mode.

2013-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/string.spad.pamphlet,
	src/algebra/Makefile.in, src/interp/Makefile.in
	src/interp/util.lisp, src/interp/scan.boot,
	src/interp/br-data.boot, src/interp/clam.boot,
	src/interp/cattable.boot, src/interp/daase.lisp,
	src/interp/g-boot.boot, src/interp/macros.lisp,
	src/interp/define.boot, src/interp/msgdb.boot,
	src/interp/lisplib.boot, src/interp/br-op1.boot,
	src/interp/vmlisp.lisp, src/interp/scwrap2.boot,
	src/boot/typrops.boot, src/boot/initial-env.lisp,
	src/boot/compiled/btscan2.clisp,
	src/boot/compiled/typrops.clisp,
	src/boot/btscan2.boot, src/lisp/primitives.lisp,
	src/lisp/fricas-package.lisp: Misc cleanups.

2013-07-25  Krystian Baclawski <krystian.baclawski@gmail.com>

	* src/interp/g-boot.boot, src/interp/define.boot,
	src/interp/compiler.boot, src/lisp/primitives.lisp:
	Add type declarations to Lisp output.

2013-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: Fix compilation of
	'has' in a function.

2013-07-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/template.boot: remove, move content to
	'nrunfast.boot', 'database.boot' and 'nruncomp.boot'.
	src/interp/Makefile.in: Adjust.
	src/interp/parsing.lisp, src/interp/lisplib.boot,
	src/interp/nruncomp.boot, src/interp/scwrap2.boot,
	src/interp/property.lisp, src/interp/spad.lisp,
	src/interp/compiler.boot: Clean up.

2013-07-24  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/boot/Makefile.in:  Remove AX_FLAGS.

2013-07-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
