@@ -39,8 +39,8 @@
 
 (export '(quit chdir |getEnv| |getCLArgs| |load_quietly| get-current-directory
           fricas-probe-file trim-directory-name pad-directory-name
-          file-kind makedir fricas-compile-file load-maybe-compiling
-          maybe-compile DEFCONST exit-with-status MEMQ |quiet_load_alien|
+          file-kind makedir fricas_compile_file fricas_compile_fasl
+          DEFCONST exit-with-status MEMQ |quiet_load_alien|
           |handle_input_file| |handle_output_file| |maybe_delete_file|
           |remove_directory| |writeablep| |openServer| |sockGetInt|
           |sockSendInt| |sockSendString| |sockGetFloat| |sockSendFloat|
