@@ -13,7 +13,7 @@ compile_lisp() {
   "$image" <<EOF
 $optimizations
 (in-package "FRICAS-LISP")
-(unless (fricas-compile-file "$1" :output-file "$output")
+(unless (fricas_compile_file "$1" "$output")
   (exit-with-status 1))
 (quit)
 EOF
