@@ -1,3 +1,11 @@
+2013-08-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/scripts/build_helper, src/algebra/Makefile.in
+	src/interp/Makefile.in, src/lisp/Makefile.in,
+	src/lisp/fricas-lisp.lisp, src/lisp/fricas-package.lisp,
+	src/etc/Makefile.in, config/var-def.mk: Clean up of
+	build system.
+
 2013-07-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/files.spad.pamphlet,
